--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ django-messages==0.6.0
 django-taggit==1.4.0
 django-unique-slugify==1.1
 django-utils-six==2.0
+gunicorn==20.1.0
 Pillow==8.2.0
 psycopg2==2.9.1
 pytz==2021.1
