--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,45 @@
+arabic-reshaper==3.0.0
 asgiref==3.3.4
+asn1crypto==1.5.1
+certifi==2023.5.7
+cffi==1.15.1
+charset-normalizer==3.1.0
+click==8.1.3
+cryptography==40.0.2
+cssselect2==0.7.0
 dj-database-url==0.5.0
 Django==3.2
 django-crispy-forms==1.11.2
 django-email-verification==0.1.0
-django-heroku==0.3.1
 django-messages==0.6.0
 django-taggit==1.4.0
 django-unique-slugify==1.1
 django-utils-six==2.0
 gunicorn==20.1.0
-Pillow==8.2.0
-psycopg2==2.9.1
+html5lib==1.1
+idna==3.4
+lxml==4.9.2
+oscrypto==1.3.0
+Pillow==9.5.0
+pycparser==2.21
+pyHanko==0.18.1
+pyhanko-certvalidator==0.22.0
+pypdf==3.9.0
+pypng==0.20220715.0
+python-bidi==0.4.2
 pytz==2021.1
+PyYAML==6.0
+qrcode==7.4.2
+reportlab==3.6.13
+requests==2.31.0
 six==1.12.0
 sqlparse==0.4.1
+svglib==1.5.1
+tinycss2==1.2.1
+typing_extensions==4.6.2
+tzlocal==5.0.1
+uritools==4.0.1
+urllib3==2.0.2
+webencodings==0.5.1
 whitenoise==5.2.0
+xhtml2pdf==0.2.11
