--- a/vercel.json
+++ b/vercel.json
@@ -2,8 +2,13 @@
     "builds": [
       {
         "src": "MyDiary/wsgi.py",
-        "use": "@vercel/python"
-      }
+        "use": "@vercel/python",
+        "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
+      },{
+        "src": "build files.sh",
+        "use": "@vercel/static-build" ,
+        "config": {"distDir": "staticfiles build"}
+    }
     ],
     "routes": [
       {
