deployment for verce test 3

--- a/requirements.txt
+++ b/requirements.txt
@@ -15,23 +15,37 @@ django-messages==0.6.0
 django-taggit==1.4.0
 django-unique-slugify==1.1
 django-utils-six==2.0
+gcloud==0.18.3
+googleapis-common-protos==1.59.0
 gunicorn==20.1.0
 html5lib==1.1
+httplib2==0.22.0
 idna==3.4
+jws==0.1.3
 lxml==4.9.2
+oauth2client==4.1.3
 oscrypto==1.3.0
 Pillow==9.5.0
+protobuf==4.23.2
+pyasn1==0.5.0
+pyasn1-modules==0.3.0
 pycparser==2.21
+pycryptodome==3.18.0
 pyHanko==0.18.1
 pyhanko-certvalidator==0.22.0
+pyparsing==3.0.9
 pypdf==3.9.0
 pypng==0.20220715.0
+Pyrebase4==4.7.0
 python-bidi==0.4.2
+python-jwt==2.0.1
 pytz==2021.1
 PyYAML==6.0
 qrcode==7.4.2
 reportlab==3.6.13
 requests==2.31.0
+requests-toolbelt==1.0.0
+rsa==4.9
 six==1.12.0
 sqlparse==0.4.1
 svglib==1.5.1
